#23: fix spacing in modal

--- a/src/components/modals/Modals.scss
+++ b/src/components/modals/Modals.scss
@@ -53,6 +53,7 @@
         flex-direction: row;
         justify-content: center;
         gap: 1rem;
+        margin-top: 1rem;
 
         &--FlexEnd {
             justify-content: flex-end;
